--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
           <span>Orbenk Segurança</span>
         </div>
       </div>
-      <a href="PORTAL NOVO.HTML" class="back-btn">
+      <a href="https://douglasjelinsky-code.github.io/supervisao/" class="back-btn">
         <i class="fas fa-arrow-left"></i>
       </a>
     </div>
