--- a/index.html
+++ b/index.html
@@ -644,10 +644,10 @@
     <section class="hero">
       <div class="hero-badge">
         <i class="fas fa-user-clock"></i>
-        Registro de Cobertura
+        Solicite sua Cobertura
       </div>
       <h2>COBERTURA DE <span>POSTO</span></h2>
-      <p>Registre sua cobertura com localização automática</p>
+      <p>Solicite sua cobertura com localização automática</p>
     </section>
 
     <div class="form-container">
